tests/parser_cases/valid/import_alias.ob0
MODULE Main;
IMPORT IO, LocalMath := Math;
BEGIN
  WriteInt(42);
END Main.
