tests/parser_cases/invalid/bad_string_literal_embedded_quote.ob0
(* INVALID: embedded quotes are not escaped using doubled quotes *)
MODULE Main;
BEGIN
  WriteString("Hello "Oberon"")
END Main.
